--- a/cv.html
+++ b/cv.html
@@ -5,6 +5,6 @@
   <title>kekayan's Resume</title>
 </head>
   <body style="width:100%; height:100%; margin:0;">
-    <iframe src="https://docs.google.com/gview?url= https://dochub.com/jadeleiyu/nO1YzvAwAvldBaYR6L4WP2/lei-yu-s-r-sum-pdf?dt=SHB2goQrvghwtD-LDuDP &embedded=true" style="width:100%; height:100%;" frameborder="0"></iframe>
+    <iframe src="https://github.com/jadeleiyu/jadeleiyu.github.io/blob/master/assets/Lei_Yu_s_R_sum_.pdf&embedded=true" style="width:100%; height:100%;" frameborder="0"></iframe>
   </body>
 </html>
