--- a/educations.html
+++ b/educations.html
@@ -3,6 +3,6 @@ title: "Educations"
 layout: default
 ---
 <article>
-	{% capture my_include %}{% include_relative educations.md %}{% endcapture %}
+	{% capture my_include %}{% include_relative education.md %}{% endcapture %}
 	{{ my_include | markdownify }}
 </article>
