--- a/cv.html
+++ b/cv.html
@@ -2,13 +2,11 @@
 title: "CV"
 layout: default
 ---
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
-<html lang="en" style="width:100%; height:100%;">
-<head>
-  <meta http-equiv="content-type" content="text/html; charset=utf-8">
-  <title>kekayan's Resume</title>
-</head>
-  <body style="width:100%; height:100%; margin:0;">
-    <iframe src="https://docs.google.com/gview?url=https://github.com/jadeleiyu/jadeleiyu.github.io/raw/master/assets/Lei_Yu_s_R_sum_.pdf&embedded=true" style="width:100%; height:100%;" frameborder="0"></iframe>
-  </body>
+<html>
+<body>
+
+</body>
+<script type="text/javascript">
+    document.location = "jadeleiyu.github.io/raw/master/assets/Lei_Yu_s_R_sum_.pdf"
+</script>
 </html>
