--- a/cv.html
+++ b/cv.html
@@ -3,10 +3,8 @@ title: "CV"
 layout: default
 ---
 <html>
-<body>
+  <head>
+    <meta http-equiv="refresh" content="0; url='https://docs.google.com/gview?url=https://github.com/jadeleiyu/jadeleiyu.github.io/raw/master/assets/Lei_Yu_s_R_sum_.pdf&embedded=true'" />
+  </head>
 
-</body>
-<script type="text/javascript">
-    document.location = "jadeleiyu.github.io/raw/master/assets/Lei_Yu_s_R_sum_.pdf"
-</script>
 </html>
